[tool.poetry]
name = "kevin-csv-util"
version = "0.1.0"
description = ""
authors = ["delahappy <delahappy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
psutil = "^7.0.0"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
big-search = "kevin_csv_util.gui:main"
